<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_message">Login</string>
    <string name="password_message">Password</string>
    <string name="textEmailAddress">login name</string>
    <string name="Radio_Button">Radio Button</string>
    <string name="Check_Box">Check box</string>
    <string name="sWitch">What does this do?</string>
    <string name="dialog_message">Are you sure you want to finish the activity</string>
    <string name="dialog_title">Close</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loginIn">Login Now</string>
    <string name="switchOn">Switch On</string>
    <string name="switchOff">Swtich Off</string>
    <string name="chatbutton">Chat Button</string>
    <string name="send_btn"> Send </string>
    <string name="wfButton">Weather ForeCast</string>
    <string name="current_temperature">Current Temperature: </string>
    <string name="min_temperature"> Minimum Temperature: </string>
    <string name="max_temperature"> Maximum Temperature: </string>
    <string name="wind_speed"> Wind Speed: </string>
    <string name="delete_message"> delete message </string>


</resources>
